Upgrade React, use Babel and webpack, refactor focus

--- a/example/index.html
+++ b/example/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>React Select Box Example</title>
-    <link rel="stylesheet" href="example.css" />
-    <link rel="stylesheet" href="select-box.css" />
   </head>
   <body>
-    <script src="example.js"></script>
+    <div id="example"></div>
+    <script src="bundle.js"></script>
   </body>
 </html>
